--- a/Assignment_2/Makefile
+++ b/Assignment_2/Makefile
@@ -2,7 +2,7 @@ build:
 	gcc Compile_link_by_exec.c -o one
 	gcc copy_files.c -o two
 	gcc Line_word_count.c -o three
-	gcc min_max_multithreading.c -o four
+	gcc min_max_multithreading.c -lpthread  -o four
 	gcc mini_shell.c -o five
 	gcc signal_to_target.c -o six
-	gcc time.c -o seven
+	gcc time.c -lpthread -o seven
