--- a/Assignment_3/Makefile
+++ b/Assignment_3/Makefile
@@ -1,8 +1,8 @@
 build:
-	gcc Prod_con_mutex.c -o one
-	gcc Prod_con_stack_sem.c -o two
-	gcc sender5.c -o six
-	gcc reciever5.c -o three
-	gcc Toggle_Client.c -o four
-	gcc Toggle_server.c -o five
+	gcc Prod_con_mutex.c -lpthread -o one
+	gcc Prod_con_stack_sem.c -lpthread -o two
+	gcc sender5.c -lrt -o six
+	gcc reciever5.c -lrt -o three
+	gcc Toggle_Client.c -lrt -o four
+	gcc Toggle_server.c -lrt -o five
 	
